# cookiecutter-portia-fastapi

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  cookiecutter.json  test_cookiecutter.py  test_requirements.txt  test_template.sh
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test_with_real_api.py
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/app/: __init__.py  config.py  logging_config.py  main.py
{{cookiecutter.project_slug}}/app/api/: routes.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  request.py  response.py
{{cookiecutter.project_slug}}/app/tools/: __init__.py  example_tools.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_schemas.py
